--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/41bd6fc6ae.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Work+Sans&display=swap" rel="stylesheet"
+    />
     <title>New Year New Me Landing Page</title>
 </head>
 <body>
@@ -102,7 +104,7 @@
             </div>
             <div class="call-text">Awlays keep a positive mindset</div>
             <div class="call-button-container">
-                <button class="call-button">Call Now</button>
+                <!-- <button class="call-button">Call Now</button> -->
             </div>
         </div>
 
